k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
  template:
    metadata:
    spec:
      containers:
        - image: frontend
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
