k8s/base/livekit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livekit
spec:
  replicas: 1
  selector:
  strategy:
    type: Recreate
  template:
    metadata:
    spec:
      containers:
        - args:
            - --config
            - /livekit.yaml
          image: livekit/livekit-server:latest
          name: livekit
          ports:
            - containerPort: 7880
              protocol: TCP
            - containerPort: 7881
              protocol: TCP
            - containerPort: 50000
              protocol: UDP
            - containerPort: 50001
              protocol: UDP
            - containerPort: 50002
              protocol: UDP
            - containerPort: 50003
              protocol: UDP
            - containerPort: 50004
              protocol: UDP
            - containerPort: 50005
              protocol: UDP
            - containerPort: 50006
              protocol: UDP
            - containerPort: 50007
              protocol: UDP
            - containerPort: 50008
              protocol: UDP
            - containerPort: 50009
              protocol: UDP
            - containerPort: 50010
              protocol: UDP
          volumeMounts:
            - mountPath: /livekit.yaml
              name: livekit-cm0
              subPath: livekit.yaml
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: livekit.yaml
                path: livekit.yaml
            name: livekit-cm0
          name: livekit-cm0
