k8s/base/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
spec:
  replicas: 1
  selector:
  strategy:
    type: Recreate
  template:
    metadata:
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
          image: minio/minio:latest
          name: minio
          ports:
            - containerPort: 9000
              protocol: TCP
            - containerPort: 9001
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: minio-data
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
