k8s/base/minio-setup-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-setup
spec:
  replicas: 1
  selector:
  template:
    metadata:
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - ' /usr/bin/mc alias set local http://minio:9000 minioadmin minioadmin; /usr/bin/mc mb --ignore-existing local/recordings; /usr/bin/mc anonymous set public local/recordings; exit 0; '
          image: minio/mc
          name: minio-setup
      restartPolicy: Always
