k8s/base/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  selector:
  template:
    metadata:
    spec:
      containers:
        - args:
            - -js
          image: nats:latest
          name: nats
          ports:
            - containerPort: 4222
              protocol: TCP
            - containerPort: 8222
              protocol: TCP
      restartPolicy: Always
