k8s/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
  template:
    metadata:
    spec:
      containers:
        - image: redis:7-alpine
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
