k8s/base/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
  name: api-gateway
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
