k8s/base/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
