k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 80
