k8s/base/livekit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit
spec:
  ports:
    - name: "7880"
      port: 7880
      targetPort: 7880
    - name: "7881"
      port: 7881
      targetPort: 7881
    - name: "50000"
      port: 50000
      protocol: UDP
      targetPort: 50000
    - name: "50001"
      port: 50001
      protocol: UDP
      targetPort: 50001
    - name: "50002"
      port: 50002
      protocol: UDP
      targetPort: 50002
    - name: "50003"
      port: 50003
      protocol: UDP
      targetPort: 50003
    - name: "50004"
      port: 50004
      protocol: UDP
      targetPort: 50004
    - name: "50005"
      port: 50005
      protocol: UDP
      targetPort: 50005
    - name: "50006"
      port: 50006
      protocol: UDP
      targetPort: 50006
    - name: "50007"
      port: 50007
      protocol: UDP
      targetPort: 50007
    - name: "50008"
      port: 50008
      protocol: UDP
      targetPort: 50008
    - name: "50009"
      port: 50009
      protocol: UDP
      targetPort: 50009
    - name: "50010"
      port: 50010
      protocol: UDP
      targetPort: 50010
