k8s/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    - name: "9001"
      port: 9001
      targetPort: 9001
