k8s/base/nats-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  ports:
    - name: "4222"
      port: 4222
      targetPort: 4222
    - name: "8222"
      port: 8222
      targetPort: 8222
