k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
