k8s/base/worker-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
    prometheus.io/path: "/metrics"
  name: worker-metrics
spec:
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
  selector:
    app: worker
  type: ClusterIP
