k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talentcurate-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: app.tc.dhawalhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8085
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
spec:
  rules:
  - host: tc.dhawalhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-frontend
            port:
              number: 80
